syntax = "proto3";

import "auth/user_token.proto";

package booking;

service BookingService {
    rpc CreateBooking(CreateBookingRequest) returns (CreateBookingResponse);
    // rpc GetBooking(GetBookingRequest) returns (GetBookingResponse);
    rpc FindOne(FindOneRequest) returns (FindOneResponse);
    rpc FindSlotBookings(FindSlotBookingsRequest) returns (FindSlotBookingsResponse);
    rpc UpdateStatusBooking(UpdateStatusBookingRequest) returns (FindOneResponse);
    rpc DeleteBooking(DeleteBookingRequest) returns (DeleteBookingResponse);
    rpc FindAllBooking(FindAllBookingRequest) returns(FindAllBookingResponse);
    rpc GetBookingsReportOfListUsers(GetBookingsReportOfListUsersRequest) returns (GetBookingsReportOfListUsersResponse) {}
    rpc GetBookingsValueByDateType(GetBookingsValueByDateTypeRequest) returns (GetBookingsValueByDateTypeResponse) {}
}

message Emp{
    string id = 1;
    string first_name = 2;
    string last_name = 3; 
    string email = 4;
}

message Service{
    string id = 1;
    string name = 2;
    repeated string images = 3;
}

message SlotBooking{
    string date = 1;
    string service = 2;
    repeated Emp employees = 3;
    string start_time = 4;
    string end_time = 5;
}

message FindSlotBookingsRequest{
    userToken.User user = 1;
    string date = 2;
    string service = 3;
    optional string employee = 4;
    optional string start_time = 5;
    optional string end_time = 6;
}

message FindSlotBookingsResponse{
    repeated SlotBooking slot_bookings = 1;
}

message CreateBookingRequest{
    userToken.User user = 1;
    string date = 2;
    string service = 3;
    optional string employee = 4;
    string start_time = 5;
    string note = 6;
    optional string voucher = 7;
}

message CreateBookingResponse{
    string id = 1;
}

message FindOneRequest{
    string id = 1;
    userToken.User user = 2;
}

message FindOneResponse{
    string id = 1;
    string start_time = 2;
    string end_time = 3;
    string note = 4;
    string date = 5;
    string status = 6;
    string note_cancel = 7;
    string user = 8;
    Emp employee = 9;
    Service service = 10;
    float total_price = 11;
    string voucher_id = 12;
    string created_at = 13;
}

message DeleteBookingRequest{
    string id = 1;
    string note = 2;
    userToken.User user = 3;
}

message DeleteBookingResponse{
    string result = 1;
}

message UpdateStatusBookingRequest{
    string id = 1;
    string status = 2;
    userToken.User user = 3;
}

message FindAllBookingRequest{
    userToken.User user = 1;
    repeated string status = 2;
    repeated string date = 3;
    repeated string services = 4;
    optional int32 page = 5;
    optional int32 limit = 6;
}

message FindAllBookingResponse{
    repeated FindOneResponse bookings = 1;
}

message GetBookingsReportOfListUsersRequest{
    userToken.User user = 1;
    repeated string emails = 2;
}

message BookingReportOfUser{
    string email = 1;
    int32 total_booking = 2;
}
 
message GetBookingsReportOfListUsersResponse{
    repeated BookingReportOfUser report_booking = 1;
}

enum DateType {
    WEEK = 0;
    MONTH = 1;
    YEAR = 2;
}

message BookingReportByDate {
    string type = 1;
    int32 total_bookings = 2;
    int32 total_value = 3;
}

message GetBookingsValueByDateTypeRequest {
    userToken.User user = 1;
    DateType type = 2;
}

message GetBookingsValueByDateTypeResponse {
    int32 value = 1;
    int32 total = 2;
    repeated BookingReportByDate report = 3;
}